--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,12 +25,12 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-md-8 col-lg-10 mb-3 mb-sm-0">
+    <div class="col mb-3 mb-sm-0">
       <div class="main-content">
         <router-outlet></router-outlet>
       </div>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-2 d-print-none">
       <about-me></about-me>
     </div>
   </div>
