Technical skills redesign

--- a/src/app/components/resume/resume.component.scss
+++ b/src/app/components/resume/resume.component.scss
@@ -66,3 +66,8 @@ button.btn-back-to-top {
     background-color: #f0f7fd;
     border-color: #d0e3f0;
   }
+
+  span.sample-work-link {
+      margin-left:0.5rem; 
+      font-size:smaller; 
+  }
