--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -52,25 +52,30 @@
 
     <div id="printableArea">
       <h2 id="h2Skills"> Technical Skills</h2>
-      <div>
-        <table class="table table-striped table-responsive-sm">
-          <caption id="techSkillsTableCaption"><i class="fa fa-fw fa-star star-orange"></i> skills acquired through
-            project
-            experience of 5 years or greater
-          </caption>
-          <tr *ngFor="let skillCategory of technicalSkillCategories">
-            <td class="w-25">{{skillCategory.name}}</td>
-            <td>
-              <ul class="list-group">
-                <li class="list-group-item" *ngFor="let skill of skillCategory.skills">
-                  <i [ngClass]="{ 'fa-star': skill.starred }" class="fa fa-fw star-orange"></i> {{skill.name}}
-                </li>
-              </ul>
-            </td>
-          </tr>
-        </table>
-
-      </div>
+      <table class="table table-condensed table-bordered table-hover table-responsive-sm">
+        <caption><i class="fa fa-fw fa-star star-orange"></i> skills acquired through
+          project
+          experience of 5 years or greater
+        </caption>
+        <ng-container *ngFor="let skillCategory of technicalSkillCategories">
+          <thead>
+            <tr>
+              <th colspan=2>{{skillCategory.name}}</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let skill of skillCategory.skills">
+              <td><i [ngClass]="{ 'fa-star': skill.starred }" class="fa fa-fw star-orange"></i> {{skill.name}}</td>
+              <td >
+                <span *ngIf="skill.workSamples" class="sample-work-link">
+                  <a *ngFor="let workSample of skill.workSamples" [href]="workSample" class="d-print-none"><i class="fa fa-github"></i>
+                    sample work</a>
+                </span>
+              </td>
+            </tr>
+          </tbody>
+        </ng-container>
+      </table>
 
       <h2 id="h2Employment">Employment History</h2>
       <table class="table table-responsive-sm">
@@ -114,8 +119,8 @@
       <p class="bs-callout bs-callout-info">This section contains brief information on a few projects that I have been
         involved in within my employment history. This list is <strong>not</strong>
         exhaustive, and only contain notable select projects. For the purpose of confidentiality, names such as the
-        clients or employers has been omitted, and the project titles slightly altered. For open-sourced/personal projects see <a
-          href="https://github.com/ShadAhm">GitHub's pinned repositories</a>.</p>
+        clients or employers has been omitted, and the project titles slightly altered. For open-sourced/personal
+        projects see <a href="https://github.com/ShadAhm">GitHub's pinned repositories</a>.</p>
       <div *ngFor="let keyProj of keyProjectAchievements" class="m-6">
         <h4 [id]="keyProj.htmlElementId">{{keyProj.title}}</h4>
         <p class="text-muted">
