--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,7 @@
-<header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
-    <a class="navbar-brand" href="#">
-      <img src="./assets/images/logo.png" class="d-inline-block align-top" />
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav shad-orange-navbar">
-        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/"
-          [routerLinkActiveOptions]="{ exact: true }">Home</a>
-        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/blog">Blog</a>
-        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/resume">Resume</a>
-      </div>
-    </div>
-  </nav>
-</header>
+<app-header></app-header>
 
 <div class="container-fluid">
-  <div class="row">
-    <div class="col">
-      <app-content-header></app-content-header>
-    </div>
-  </div>
+  <app-content-header></app-content-header>
   <div class="row">
     <div class="col mb-3 mb-sm-0">
       <div class="main-content">
