Changing the frontpage body to use card

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,45 +1,47 @@
-<div class="bg-white p-2">
-    <h3>Work in progress<small> watch this space</small></h3>
-    <strong>Sample text: </strong>
-    <div id="lipsum">
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque gravida cursus ornare. Aenean in
-            efficitur nunc. Proin laoreet imperdiet mattis. Aenean fermentum facilisis dolor elementum aliquam. Morbi eu
-            mollis urna. Maecenas ac velit mollis justo elementum rutrum. Ut tincidunt pharetra ipsum, et ullamcorper
-            massa vulputate eu. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-            Suspendisse elementum id purus ut sollicitudin. Vivamus imperdiet, erat non hendrerit maximus, felis nunc
-            cursus nibh, mattis facilisis tortor mi ut massa. Nunc ex urna, feugiat efficitur tempor quis, facilisis id
-            nunc. Ut dignissim, nibh eget finibus lobortis, nibh lectus eleifend nibh, vel aliquam dui nibh id quam. In
-            mauris diam, ornare eget neque non, consectetur luctus dolor. Nunc interdum est vel magna dapibus, a
-            pulvinar ligula rhoncus. Morbi porta turpis vitae hendrerit mollis. Pellentesque rhoncus nibh at sapien
-            bibendum varius.
-        </p>
-        <p>
-            Mauris non quam varius, sagittis augue a, placerat neque. Suspendisse vel volutpat ipsum, a hendrerit massa.
-            Phasellus et commodo ex, ut imperdiet eros. Duis dapibus congue ante luctus gravida. Sed metus nisi, ornare
-            ac lobortis eget, faucibus at neque. Cras vel blandit velit. Maecenas leo mauris, ullamcorper sit amet quam
-            id, porttitor gravida nisi. Nullam at tincidunt ligula.
-        </p>
-        <p>
-            Aenean laoreet metus a est vestibulum, vitae placerat augue maximus. Cras ut nisi eget nunc lacinia laoreet.
-            Aliquam eget magna porta, vestibulum velit vitae, consequat augue. Nulla diam mauris, eleifend eu vehicula
-            non, vehicula cursus sem. Cras ultricies purus in euismod posuere. Sed ac metus sed orci fermentum
-            pellentesque. Aliquam erat volutpat.
-        </p>
-        <p>
-            Nam vel ante ac neque rhoncus dictum eu vitae lorem. Interdum et malesuada fames ac ante ipsum primis in
-            faucibus. Vestibulum in sem at lectus tincidunt volutpat vel nec purus. Aenean nec velit sit amet ligula
-            imperdiet efficitur. Phasellus cursus diam a pulvinar consequat. Phasellus a nisl sit amet nisi efficitur
-            porttitor nec eu eros. Maecenas sit amet tellus ipsum. Donec et felis mollis, rutrum felis a, blandit
-            ligula. Curabitur viverra consectetur congue. Vestibulum ante ipsum primis in faucibus orci luctus et
-            ultrices posuere cubilia Curae; Nunc convallis neque a quam fermentum, laoreet accumsan magna tincidunt.
-            Phasellus commodo diam in leo euismod lobortis. Phasellus suscipit quam nisl, at rutrum ipsum laoreet sed.
-        </p>
-        <p>
-            Mauris placerat id dolor eu lacinia. Etiam quis felis tristique, bibendum sapien ut, lacinia justo. Ut leo
-            magna, finibus nec bibendum quis, pharetra a mauris. Maecenas et nunc neque. Integer id aliquam felis. Morbi
-            eget augue laoreet, lobortis ex nec, luctus erat. Praesent nec turpis rutrum, tempus diam quis, tempus
-            ligula. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-        </p>
+<div class="card">
+    <div class="card-body">
+            <h3>Welcome to ShadAhm.github.io <small style="color:red">Work in progress, watch this space</small></h3>
+            <strong>Sample text: </strong>
+            <div id="lipsum">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque gravida cursus ornare. Aenean in
+                    efficitur nunc. Proin laoreet imperdiet mattis. Aenean fermentum facilisis dolor elementum aliquam. Morbi eu
+                    mollis urna. Maecenas ac velit mollis justo elementum rutrum. Ut tincidunt pharetra ipsum, et ullamcorper
+                    massa vulputate eu. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                    Suspendisse elementum id purus ut sollicitudin. Vivamus imperdiet, erat non hendrerit maximus, felis nunc
+                    cursus nibh, mattis facilisis tortor mi ut massa. Nunc ex urna, feugiat efficitur tempor quis, facilisis id
+                    nunc. Ut dignissim, nibh eget finibus lobortis, nibh lectus eleifend nibh, vel aliquam dui nibh id quam. In
+                    mauris diam, ornare eget neque non, consectetur luctus dolor. Nunc interdum est vel magna dapibus, a
+                    pulvinar ligula rhoncus. Morbi porta turpis vitae hendrerit mollis. Pellentesque rhoncus nibh at sapien
+                    bibendum varius.
+                </p>
+                <p>
+                    Mauris non quam varius, sagittis augue a, placerat neque. Suspendisse vel volutpat ipsum, a hendrerit massa.
+                    Phasellus et commodo ex, ut imperdiet eros. Duis dapibus congue ante luctus gravida. Sed metus nisi, ornare
+                    ac lobortis eget, faucibus at neque. Cras vel blandit velit. Maecenas leo mauris, ullamcorper sit amet quam
+                    id, porttitor gravida nisi. Nullam at tincidunt ligula.
+                </p>
+                <p>
+                    Aenean laoreet metus a est vestibulum, vitae placerat augue maximus. Cras ut nisi eget nunc lacinia laoreet.
+                    Aliquam eget magna porta, vestibulum velit vitae, consequat augue. Nulla diam mauris, eleifend eu vehicula
+                    non, vehicula cursus sem. Cras ultricies purus in euismod posuere. Sed ac metus sed orci fermentum
+                    pellentesque. Aliquam erat volutpat.
+                </p>
+                <p>
+                    Nam vel ante ac neque rhoncus dictum eu vitae lorem. Interdum et malesuada fames ac ante ipsum primis in
+                    faucibus. Vestibulum in sem at lectus tincidunt volutpat vel nec purus. Aenean nec velit sit amet ligula
+                    imperdiet efficitur. Phasellus cursus diam a pulvinar consequat. Phasellus a nisl sit amet nisi efficitur
+                    porttitor nec eu eros. Maecenas sit amet tellus ipsum. Donec et felis mollis, rutrum felis a, blandit
+                    ligula. Curabitur viverra consectetur congue. Vestibulum ante ipsum primis in faucibus orci luctus et
+                    ultrices posuere cubilia Curae; Nunc convallis neque a quam fermentum, laoreet accumsan magna tincidunt.
+                    Phasellus commodo diam in leo euismod lobortis. Phasellus suscipit quam nisl, at rutrum ipsum laoreet sed.
+                </p>
+                <p>
+                    Mauris placerat id dolor eu lacinia. Etiam quis felis tristique, bibendum sapien ut, lacinia justo. Ut leo
+                    magna, finibus nec bibendum quis, pharetra a mauris. Maecenas et nunc neque. Integer id aliquam felis. Morbi
+                    eget augue laoreet, lobortis ex nec, luctus erat. Praesent nec turpis rutrum, tempus diam quis, tempus
+                    ligula. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                </p>
+            </div>
     </div>
 </div>
