--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 $body-bg: #f8f9fa;
-$body-color: #111;
+$body-color: #343a40;
 $font-size-base: 0.85rem; 
 
 @import 'node_modules/bootstrap/scss/bootstrap';
