Resume link to projects page

--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -117,11 +117,11 @@
       </table>
 
       <h2 id="h2KeyProject">Key Project Achievements</h2>
-      <p class="bs-callout bs-callout-info">This section contains brief information on a few projects that I have been
+      <p class="bs-callout bs-callout-info">This section contains brief information on a few proprietary projects that I have been
         involved in within my employment history. This list is <strong>not</strong>
         exhaustive, and only contain notable select projects. For the purpose of confidentiality, names such as the
-        clients or employers has been omitted, and the project titles slightly altered. For open-sourced/personal
-        projects see <a href="https://github.com/ShadAhm">GitHub's pinned repositories</a>.</p>
+        clients or employers has been omitted, and the project titles slightly altered. For open-sourced/personal pet
+        projects see <a routerLink="/projects">Projects</a> or my <a href="https://github.com/ShadAhm">GitHub repositories</a>.</p>
       <div *ngFor="let keyProj of keyProjectAchievements" class="m-6">
         <h4 [id]="keyProj.htmlElementId">{{keyProj.title}}</h4>
         <p class="text-muted">
