Blog page mocks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<div class="container-fluid">
+<div class="container">
   <app-content-header></app-content-header>
   <div class="row">
     <div class="col mb-3 mb-sm-0">
