--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,16 +1,18 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
-    <a class="navbar-brand" href="#">
-      <img src="./assets/images/logo.png" class="d-inline-block align-top" />
-    </a>
-    <button class="navbar-toggler" type="button" (click)="toggleNav()">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div [ngClass]="{'collapse': navbarCollapsed}" class="navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav shad-orange-navbar" (click)="toggleNav()">
-        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/blog">Blog</a>
-        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/projects">Projects</a>
-        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/resume">Resume</a>
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img src="./assets/images/logo.png" class="d-inline-block align-top" />
+      </a>
+      <button class="navbar-toggler" type="button" (click)="toggleNav()">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div [ngClass]="{'collapse': navbarCollapsed}" class="navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav shad-orange-navbar" (click)="toggleNav()">
+          <a class="nav-item nav-link" routerLinkActive="active" routerLink="/blog">Blog</a>
+          <a class="nav-item nav-link" routerLinkActive="active" routerLink="/projects">Projects</a>
+          <a class="nav-item nav-link" routerLinkActive="active" routerLink="/resume">Resume</a>
+        </div>
       </div>
     </div>
   </nav>
