Blog post working

--- a/src/app/components/blog-post/blog-post.component.html
+++ b/src/app/components/blog-post/blog-post.component.html
@@ -1,10 +1,13 @@
 <div class="card">
   <div class="card-body">
-    <h5><a href="http://">{{ post.title }}</a></h5>
-    <p>{{post.description}}</p>
+    <h2>{{ post.title }}</h2>
+    <hr/>
     <div>
       <small>Published on {{post.publishedDate | date:'d MMM y'}}</small> <span class="bullet-saparator">&bull;</span>
       <span *ngFor="let tag of post.tags" class="badge badge-pill badge-light">{{tag}}</span>
     </div>
+    <p class="bs-callout">{{post.description}}</p>
+
+    <markdown [src]="'assets/blogs/' + post.fileName" lineNumbers [start]="5"></markdown>
   </div>
 </div>
