--- a/src/app/components/blog-post/blog-post.component.html
+++ b/src/app/components/blog-post/blog-post.component.html
@@ -1,13 +1,23 @@
 <div class="card">
   <div class="card-body">
-    <h2>{{ post.title }}</h2>
-    <hr/>
-    <div>
-      <small>Published on {{post.publishedDate | date:'d MMM y'}}</small> <span class="bullet-saparator">&bull;</span>
-      <span *ngFor="let tag of post.tags" class="badge badge-pill badge-light">{{tag}}</span>
-    </div>
-    <p class="bs-callout">{{post.description}}</p>
-
-    <markdown [src]="'assets/blogs/' + post.fileName" lineNumbers [start]="5"></markdown>
+    <ng-container *ngIf="post">
+      <h2>{{ post.title }}</h2>
+      <div>
+        <small>Published on {{post.publishedDate | date:'d MMM y'}}</small>
+        <span class="bullet-saparator">&bull;</span>
+        <span *ngFor="let tag of post.tags" class="badge badge-pill badge-light">{{tag}}</span>
+      </div>
+      <hr />
+      <markdown [src]="filePath" lineNumbers [start]="5"></markdown>
+    </ng-container>
+    <ng-container *ngIf="blog404">
+      <img class="img-fluid" src="https://i.imgur.com/wt7zuCw.png" />
+      <h1>Not Found</h1>
+      <p>
+        Your search query for blog <code>{{name}}</code> is not found.<br />
+        This page may have been renamed or deleted.<br />
+      </p>
+      <p><a routerLink="/blog">Go to Blog</a>.</p>
+    </ng-container>
   </div>
 </div>
