--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -1,7 +1,7 @@
 <div class="card">
     <div class="card-body">
         <div *ngFor="let post of posts" class="blog-post mb-4 pb-2">
-            <h5><a href="http://">{{ post.title }}</a></h5>
+            <h5><a [routerLink]="[post.name]">{{ post.title }}</a></h5>
             <p>{{post.description}}</p>
             <div>
                 <small>Published on {{post.publishedDate | date:'d MMM y'}}</small> <span
