--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <div class="card-body">
+    <div class="card-body blog-body">
         <div *ngFor="let post of posts" class="blog-post mb-4 pb-2">
             <h5><a [routerLink]="[post.name]">{{ post.title }}</a></h5>
             <p>{{post.description}}</p>
