--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -2,12 +2,12 @@
   <div class="card-body" *ngIf="data">
     <h5 class="card-title">{{data.name}}</h5>
     <p class="card-text">{{data.description}}</p>
-    <a class="card-link" [href]="data.url">View Repository</a>
+    <a class="card-link" [href]="data.html_url">View Repository</a>
     <a class="card-link" [href]="data.homepage">View Demo</a>
-    <a class="card-link" [href]="data.stargazers_url">
+    <a class="card-link" [href]="data.html_url + '/stargazers'">
       <i class="fa fa-star"></i> {{data.stargazers_count}}
     </a>
-    <a class="card-link" [href]="data.forks_url">
+    <a class="card-link" [href]="data.html_url + '/network/members'">
       <i class="fa fa-code-fork"></i> {{data.forks_count}}
     </a>
   </div>
