--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,18 +4,15 @@
   </div>
   <div class="about-me-content pt-2">
     <h5>About me</h5>
-    <p>Hi, I'm Shad. I am a Kuala Lumpur-based Software Developer. I primarily code within the .NET stack.</p>
-    <label for="emailLink">Contact: </label><a id="emailLink" href="mailto:arsh90@gmail.com">arsh90@gmail.com</a>
-    <ul class="about-me-actionslist">
-      <li><a class="btn btn-sm btn-link" routerLink="/resume">
-          <i class="fa fa-fw fa-file"></i> View Resume
-        </a>
-      </li>
-      <li>
-        <a class="btn btn-sm btn-link" href="https://www.github.com/ShadAhm/" target="_blank">
-          <i class="fa fa-fw fa-github"></i> View GitHub
-        </a>
-      </li>
-    </ul>
+    <p>I am a Kuala Lumpur-based Software Developer. I primarily code within the .NET stack.</p>
+    <div>
+      <a id="emailLink" href="mailto:arsh90@gmail.com"><i class="fa fa-fw fa-envelope"></i> arsh90@gmail.com</a>
+      <a routerLink="/resume">
+        <i class="fa fa-fw fa-file"></i> View Resume
+      </a>
+      <a href="https://www.github.com/ShadAhm/" target="_blank">
+        <i class="fa fa-fw fa-github"></i> View GitHub
+      </a>
+    </div>
   </div>
 </div>
