--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
     </div>
   </div>
 </div>
-<footer class="footer">
+<footer class="footer d-print-none">
   <div class="container">
     <span>Copyright 	&copy; 2018 Arshad Ahmad (ShadAhm)<br/>
       Built with <a href="https://angular.io/">Angular</a>, hosted on <a href="https://pages.github.com/">GitHub Pages</a>. Blog built with <a href="https://github.com/jfcere/ngx-markdown">ngx-markdown</a>.<br/>
