--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card mb-2">
   <div class="card-body">
     <div class="row d-print-none">
       <div class="col">
@@ -45,12 +45,16 @@
           <td>arsh90@gmail.com</td>
         </tr>
       </table>
-
+    
       <p class="panel"><strong>Note:</strong> An online (better) version of this resume can be viewed at
         <u>https://shadahm.github.io/resume</u></p>
     </div>
+  </div>
+</div>
 
-    <div id="printableArea">
+<div id="printableArea">
+  <div class="card mb-2">
+    <div class="card-body">
       <h2 id="h2Skills"> Technical Skills</h2>
       <table class="table table-responsive-sm">
         <caption><i class="fa fa-fw fa-star star-orange"></i> skills acquired through
@@ -58,11 +62,11 @@
           experience of 5 years or greater
         </caption>
         <thead>
-            <tr>
-              <th>Skill</th>
-              <th class="d-print-none">Public work sample(s)</th>
-            </tr>
-          </thead>
+          <tr>
+            <th>Skill</th>
+            <th class="d-print-none">Public work sample(s)</th>
+          </tr>
+        </thead>
         <ng-container *ngFor="let skillCategory of technicalSkillCategories">
           <tbody>
             <tr *ngFor="let skill of skillCategory.skills">
@@ -77,7 +81,11 @@
           </tbody>
         </ng-container>
       </table>
+    </div>
+  </div>
 
+  <div class="card mb-2">
+    <div class="card-body">
       <h2 id="h2Employment">Employment History</h2>
       <table class="table table-responsive-sm">
         <thead>
@@ -115,13 +123,19 @@
           </tr>
         </tfoot>
       </table>
+    </div>
+  </div>
 
+  <div class="card mb-2">
+    <div class="card-body">
       <h2 id="h2KeyProject">Key Project Achievements</h2>
-      <p class="bs-callout bs-callout-info">This section contains brief information on a few proprietary projects that I have been
+      <p class="bs-callout bs-callout-info">This section contains brief information on a few proprietary projects that I
+        have been
         involved in within my employment history. This list is <strong>not</strong>
         exhaustive, and only contain notable select projects. For the purpose of confidentiality, names such as the
         clients or employers has been omitted, and the project titles slightly altered. For open-sourced/personal pet
-        projects see <a routerLink="/projects">Projects</a> or my <a href="https://github.com/ShadAhm">GitHub repositories</a>.</p>
+        projects see <a routerLink="/projects">Projects</a> or my <a href="https://github.com/ShadAhm">GitHub
+          repositories</a>.</p>
       <div *ngFor="let keyProj of keyProjectAchievements" class="m-6">
         <h4 [id]="keyProj.htmlElementId">{{keyProj.title}}</h4>
         <p class="text-muted">
@@ -139,7 +153,11 @@
           <li *ngFor="let responsb of keyProj.jobResponsibilities">{{responsb}}</li>
         </ul>
       </div>
+    </div>
+  </div>
 
+  <div class="card">
+    <div class="card-body">
       <h2 id="h2Education">Certifications & Education</h2>
       <h4>Certifications</h4>
       <ul class="education-list">
@@ -152,7 +170,6 @@
           2013
         </li>
       </ul>
-
       <h4>Education</h4>
       <ul class="education-list">
         <li>
