--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -1,11 +1,8 @@
-<div class="alert alert-warning" role="alert">
-    <h5>
-        Work in progress. Watch this space
-    </h5>
-    <p>
-        Thanks for visiting. However this section of the site is still a work in progress. I choose to keep this
-        up for those who are interested to view and follow the development progress. I commit a few times a week. 
-    </p>
+<div class="card h-100" *ngIf="posts == null || posts.length == 0">
+    <div class="card-body">
+        <h5 class="card-title">No blog posts</h5>
+        <p class="card-text">There are no blog posts found at the moment. </p>
+    </div>
 </div>
 <div class="card mb-2" *ngFor="let post of posts">
     <div class="card-body">
