--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,9 @@
 .footer {
     margin-top:1rem; 
     padding-bottom:1rem; 
-}
 
-.footer span {
-    color:#999; 
-    font-size:smaller; 
+    span {
+        color:#999; 
+        font-size:smaller; 
+    }
 }
