--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -129,13 +129,14 @@
   <div class="card mb-2">
     <div class="card-body">
       <h2 id="h2KeyProject">Key Project Achievements</h2>
-      <p class="bs-callout bs-callout-info">This section contains brief information on a few proprietary projects that I
+      <div class="bs-callout bs-callout-info">
+        This section contains brief information on a few proprietary projects that I
         have been
         involved in within my employment history. This list is <strong>not</strong>
         exhaustive, and only contain notable select projects. For the purpose of confidentiality, names such as the
         clients or employers has been omitted, and the project titles slightly altered. For open-sourced/personal pet
         projects see <a routerLink="/projects">Projects</a> or my <a href="https://github.com/ShadAhm">GitHub
-          repositories</a>.</p>
+          repositories</a>.</div>
       <div *ngFor="let keyProj of keyProjectAchievements" class="m-6">
         <h4 [id]="keyProj.htmlElementId">{{keyProj.title}}</h4>
         <p class="text-muted">
