--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -15,7 +15,7 @@
         </ol>
       </div>
       <div class="col-md-8">
-        <h2 id="h2Introduction">Introduction</h2>
+        <h2 class="card-title" id="h2Introduction">Introduction</h2>
         <p>Hi, I'm Shad. And welcome to my online resume. This page was created to provide you the ability to navigate
           my
           details with ease. A printed and PDF version is also available. This resume and site itself is intended as a
@@ -24,7 +24,7 @@
           (internal or external) should be created with the user first-in-mind, providing sufficient navigation, and
           should be designed with complexities that requires training as little as possible.</p>
         <p>Feedbacks and comments are very welcome. Get in touch. </p>
-        <div class="d-none d-md-inline-block d-print-none my-4">
+        <div class="d-none d-md-inline-block d-print-none mt-4">
           <button class="btn btn-sm btn-primary mr-2" (click)="print()"><i class="fa fa-print"></i> Print this
             resume</button>
           <button class="btn btn-sm btn-primary" disabled="disabled" (click)="print()"><i class="fa fa-file-pdf-o"></i>
@@ -45,7 +45,7 @@
           <td>arsh90@gmail.com</td>
         </tr>
       </table>
-    
+
       <p class="panel"><strong>Note:</strong> An online (better) version of this resume can be viewed at
         <u>https://shadahm.github.io/resume</u></p>
     </div>
@@ -55,8 +55,8 @@
 <div id="printableArea">
   <div class="card mb-2">
     <div class="card-body">
-      <h2 id="h2Skills"> Technical Skills</h2>
-      <table class="table table-responsive-sm">
+      <h2 class="card-title" id="h2Skills"> Technical Skills</h2>
+      <table class="table table-responsive-sm mb-0">
         <caption><i class="fa fa-fw fa-star star-orange"></i> skills acquired through
           project
           experience of 5 years or greater
@@ -86,8 +86,8 @@
 
   <div class="card mb-2">
     <div class="card-body">
-      <h2 id="h2Employment">Employment History</h2>
-      <table class="table table-responsive-sm">
+      <h2 class="card-title" id="h2Employment">Employment History</h2>
+      <table class="table table-responsive-sm mb-0">
         <thead>
           <tr>
             <th>Company Name</th>
@@ -128,7 +128,7 @@
 
   <div class="card mb-2">
     <div class="card-body">
-      <h2 id="h2KeyProject">Key Project Achievements</h2>
+      <h2 class="card-title" id="h2KeyProject">Key Project Achievements</h2>
       <div class="bs-callout bs-callout-info">
         This section contains brief information on a few proprietary projects that I
         have been
@@ -159,7 +159,7 @@
 
   <div class="card">
     <div class="card-body">
-      <h2 id="h2Education">Certifications & Education</h2>
+      <h2 class="card-title" id="h2Education">Certifications & Education</h2>
       <h4>Certifications</h4>
       <ul class="education-list">
         <li>
