temporary redesign for technical skills section

--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -56,7 +56,7 @@
   <div class="card mb-2">
     <div class="card-body">
       <h2 class="card-title" id="h2Skills"> Technical Skills</h2>
-      <table class="table table-responsive-sm mb-0">
+      <table class="table table-responsive-sm table-borderless table-condensed table-hover mb-0">
         <caption><i class="fa fa-fw fa-star star-orange"></i> skills acquired through
           project
           experience of 5 years or greater
