--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -1,15 +1,11 @@
 div.loading-bay {
-    opacity:0.6; 
-
     h5,p {
-    background-color:black; 
-    color:black; 
-    opacity:0.6; 
+    background-color:#f8f9fa; 
+    color:#f8f9fae7; 
     }
 
     a {
-        background-color:black;
-        color:black; 
-        opacity:0.6; 
+        background-color:#f8f9fa;
+        color:#f8f9fae7; 
     }
 }
