--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="./assets/images/logo.png" class="d-inline-block align-top" />
+        <img src="./assets/images/logo.png" />
       </a>
       <button class="navbar-toggler" type="button" (click)="toggleNav()">
         <span class="navbar-toggler-icon"></span>
