Removed footer bit about the blog

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
 <footer class="footer d-print-none">
   <div class="container">
     <span>Copyright 	&copy; 2018 Arshad Ahmad (ShadAhm)<br/>
-      Built with <a href="https://angular.io/">Angular</a>, hosted on <a href="https://pages.github.com/">GitHub Pages</a>. Blog built with <a href="https://github.com/jfcere/ngx-markdown">ngx-markdown</a>.<br/>
+      Built with <a href="https://angular.io/">Angular</a>, hosted on <a href="https://pages.github.com/">GitHub Pages</a>.<br/>
       <a href="https://github.com/ShadAhm/shadahm.github.io">Source code and documentation.</a>
     </span>
   </div>
