Added linked-in profile

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -13,6 +13,9 @@
       <a href="https://www.github.com/ShadAhm/" target="_blank">
         <i class="fa fa-fw fa-github"></i> View GitHub
       </a>
+      <a href="https://www.linkedin.com/in/shad-ahmad-5a0189208/" target="_blank">
+        <i class="fa fa-fw fa-linkedin"></i> View LinkedIn
+      </a>
     </div>
   </div>
 </div>
