--- a/src/app/components/resume/skills/skills-component.component.scss
+++ b/src/app/components/resume/skills/skills-component.component.scss
@@ -7,3 +7,12 @@ i.star-orange {
         margin:2px;
     }
 }
+
+.legend-table > tbody > tr > td:first-child {
+    text-align: center;
+    padding-right: 4px;
+}
+
+div.section-footer {
+    margin-top:1rem;
+}
