--- a/src/app/components/resume/skills/skills-component.component.html
+++ b/src/app/components/resume/skills/skills-component.component.html
@@ -1,29 +1,59 @@
 <h2 class="card-title" id="h2Skills"> Technical Skills</h2>
 <table class="table table-responsive-sm table-borderless table-condensed table-hover mb-0">
-  <caption><i class="fa fa-fw fa-star star-orange"></i> essential skills, will usually prefer to accept jobs using these technologies.
-  </caption>
   <thead>
     <tr>
+      <th>Category</th>
       <th>Skill</th>
       <th></th>
       <th class="d-print-none"></th>
     </tr>
   </thead>
-  <tbody>
-    <tr *ngFor="let skill of technicalSkills">
-      <td>{{skill.name}}</td>
-      <td class="tags-group">
-          <i [ngClass]="{ 'fa-star': skill.starred }" class="fa fa-fw star-orange"></i>  
-          <span class="badge badge-info">{{ calculateExperience(skill) }}</span>
-          <span class="badge badge-primary" *ngIf="isCurrentlyUsing(skill)">Currently using</span>
-      </td>
-      <td class="d-print-none">
-        <span *ngIf="skill.workSamples && skill.workSamples.length > 0" class="sample-work-link small">
-          Example work: 
-          <a *ngFor="let workSample of skill.workSamples" [href]="workSample.url">
-            {{workSample.label}}</a>
-        </span>
-      </td>
+  <ng-container *ngFor="let model of gridModels">
+    <tr>
+      <td [attr.rowspan]="model.skills.length + 1">{{model.category}}</td>
     </tr>
-  </tbody>
+    <ng-container *ngFor="let skill of model.skills; let i= index;">
+      <tr>
+        <td>{{skill.name}}</td>
+        <td class="tags-group">
+          <i [ngClass]="{ 'fa-star': skill.starred }" class="fa fa-fw star-orange"></i>
+          <span class="badge badge-info">{{ calculateExperience(skill.totalYearsExp) }}</span>
+          <span class="badge badge-primary" *ngIf="isCurrentlyUsing(skill)">Current</span>
+        </td>
+        <td class="d-print-none">
+          <span *ngIf="skill.workSamples && skill.workSamples.length > 0" class="sample-work-link small">
+            Example work:
+            <a *ngFor="let workSample of skill.workSamples" [href]="workSample.url">
+              {{workSample.label}}</a>
+          </span>
+        </td>
+      </tr>
+    </ng-container>
+  </ng-container>
 </table>
+
+<div class="section-footer">
+  <h5>Legend</h5>
+  <table class="legend-table">
+    <tbody>
+      <tr>
+        <td>
+          <i class="fa fa-fw fa-star star-orange"></i>
+        </td>
+        <td>Essential skills, will primarily accept jobs using these technologies.</td>
+      </tr>
+      <tr>
+        <td>
+          <span class="badge badge-info">N years</span>
+        </td>
+        <td>Years of professional experience.</td>
+      </tr>
+      <tr>
+        <td>
+          <span class="badge badge-primary">Current</span>
+        </td>
+        <td>Technologies I am currently working with in my current job.</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
